<?xml version="1.0"?>
<package format="3">
  <name>ackermann_msgs</name>
  <version>1.0.2</version>
  <description>
    ROS messages for robots using Ackermann steering.
  </description>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <author>Jack O'Quin</author>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ackermann_msgs</url>
  <url type="repository">https://github.com/ros-drivers/ackermann_msgs.git</url>
  <url type="bugtracker">https://github.com/ros-drivers/ackermann_msgs/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
